# cloud-custodian

./: .gitignore  Makefile  OWNERS
tools/c7n_huaweicloud/: .gitignore  MANIFEST.in  pyproject.toml  readme.md
tools/c7n_huaweicloud/c7n_huaweicloud/: addtrakcer.yml  client.py  create-notification.yml  cts.py  custodian.yml  deletetracker.yml  entry.py  handler.py  marker_pagination.py  mu.py  mugc.py  pagination.py  policy.py  provider.py  query.py  toggle-tracker-close.yml  toggle-tracker.yml  update-cts-notification.yml
tools/c7n_huaweicloud/c7n_huaweicloud/actions/: __init__.py  autotag.py  base.py  elb.py  smn.py  smn2.py  tms.py
tools/c7n_huaweicloud/c7n_huaweicloud/create-cts-notification/: metadata.json
tools/c7n_huaweicloud/c7n_huaweicloud/cts-addtracker/: action-ctsaddtracker  metadata.json  resources.json
tools/c7n_huaweicloud/c7n_huaweicloud/cts-test/: action-ctsaddtracker  action-ctsquery  metadata.json  resources.json
tools/c7n_huaweicloud/c7n_huaweicloud/delete-tracker/: action-ctsdeletetracker  metadata.json  resources.json
tools/c7n_huaweicloud/c7n_huaweicloud/filters/: __init__.py  ces.py  config.py  elb.py  exempted.py  missing_tag.py  revisions.py  stream.py  time.py  tms.py  transfer.py  vpc.py
tools/c7n_huaweicloud/c7n_huaweicloud/query/: metadata.json
tools/c7n_huaweicloud/c7n_huaweicloud/query-noti/: metadata.json  resources.json
tools/c7n_huaweicloud/c7n_huaweicloud/resources/: antiddos.py  aom.py  apig.py  as.py  bms.py  cbr_backup.py  cbr_protectable.py  cbr_vault.py  cc.py  cce.py  cci.py  ccm.py  cdn.py  ces.py  coc.py  config.py  (+44 more)
tools/c7n_huaweicloud/example-policies/: swr.yaml
tools/c7n_huaweicloud/sample/: test_coc.yml
tools/c7n_huaweicloud/tests/: huaweicloud_common.py  test_antiddos.py  test_aom.py  test_apig.py  test_as.py  test_bms.py  test_cbr_backup.py  test_cbr_protectable.py  test_cbr_vault.py  test_cc.py  test_cce.py  test_cci.py  test_ccm.py  test_cdn.py  test_ces.py  test_codeartsbuild.py  test_codeartsrepo.py  test_common_exempted.py  test_common_missing_tag_filter.py  test_config_tracker.py  test_cts.py  test_dc.py  test_deh.py  test_ecs.py  test_eg.py  test_eip.py  test_elb.py  test_er_instance.py  test_evs_volume.py  test_geminidb.py  test_hss.py  test_ims.py  test_kafka.py  test_kms.py  test_lts_stream.py  test_lts_transfer.py  test_nat.py  test_obs.py  test_organizations.py  test_ram.py  (+14 more)
(+539 files in other folders)
