[tool.poetry]
name = "c7n_huaweicloud"
version = "0.1.1"
description = "Cloud Custodian - Huawei Cloud Support"
readme = "readme.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = "^3.8"
jsonpatch = "^1.25"
pytz = "^2025.2"
python-dateutil = "^2.8.2"
retrying = "^1.3.3"
netaddr = "^0.7.19"
huaweicloudsdkapig = "^3.1.138"
huaweicloudsdkecs = "3.1.155"
huaweicloudsdkevs = "^3.1.138"
huaweicloudsdkvpc = "^3.1.138"
huaweicloudsdktms = "^3.1.151"
huaweicloudsdkiam = "^3.1.140"
huaweicloudsdkcoc = "^3.1.138"
huaweicloudsdkconfig = "^3.1.138"
huaweicloudsdkdeh = "^3.1.138"
huaweicloudsdkobs = "^3.1.138"
esdk-obs-python = "^3.24.12"
huaweicloudsdkces = "^3.1.138"
huaweicloudsdksmn = "^3.1.138"
huaweicloudsdkfunctiongraph = "^3.1.155"
huaweicloudsdkeg = "^3.1.138"
huaweicloudsdkelb = "^3.1.138"
huaweicloudsdkeip = "^3.1.138"
huaweicloudsdkgeip = "^3.1.138"
huaweicloudsdkims = "^3.1.138"
huaweicloudsdkkafka = "^3.1.138"
huaweicloudsdkkms = "^3.1.138"
huaweicloudsdkcbr = "^3.1.138"
huaweicloudsdknat = "^3.1.138"
huaweicloudsdker = "^3.1.138"
huaweicloudsdkcts = "^3.1.139"
huaweicloudsdksecmaster = "^3.1.140"
huaweicloudsdksfsturbo = "^3.1.138"
huaweicloudsdkorganizations ="^3.1.138"
huaweicloudsdkram = "^3.1.138"
huaweicloudsdkantiddos = "^3.1.138"
huaweicloudsdkdns = "^3.1.138"
huaweicloudsdkrocketmq = "^3.1.138"
huaweicloudsdkswr = "^3.1.138"
huaweicloudsdkscm = "^3.1.152"
huaweicloudsdkdc = "^3.1.138"
huaweicloudsdkcc = "^3.1.138"
huaweicloudsdkhss = "^3.1.145"
huaweicloudsdkbms = "^3.1.138"
huaweicloudsdkrds = "^3.1.146"
huaweicloudsdkaom = "^3.1.138"
huaweicloudsdkworkspace = "^3.1.138"
huaweicloudsdkcdn = "^3.1.146"
huaweicloudsdkccm = "^3.1.153"
huaweicloudsdklts = "^3.1.150"
huaweicloudsdkvpcep = "^3.1.138"

[tool.poetry.group.dev.dependencies]
pytest = "<8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
